Included max size for Relationship and Name
