# ScoobWebApp/bin/Debug/net7.0/Producer/swagger.json
@@ -122,46 +122,6 @@
         }
       }
     },
-    "/Relationship/GetScoobyGangById/{id}": {
-      "get": {
-        "tags": [
-          "Relationship"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ScoobGang"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ScoobGang"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ScoobGang"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/Relationship/AddScoobyRelation": {
       "post": {
         "tags": [
@@ -294,20 +254,6 @@
         ],
         "type": "string"
       },
-      "ScoobGang": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "ScoobRelation": {
         "type": "object",
         "properties": {
@@ -316,15 +262,19 @@
             "format": "int32"
           },
           "name": {
+            "maxLength": 60,
+            "minLength": 0,
+            "type": "string",
+            "nullable": true
+          },
+          "relationship": {
+            "maxLength": 100,
+            "minLength": 0,
             "type": "string",
             "nullable": true
           },
           "gang": {
             "$ref": "#/components/schemas/GangMember"
-          },
-          "relationship": {
-            "type": "string",
-            "nullable": true
           },
           "appearance": {
             "type": "string",
